src/parser/query/grammar/autogenerated/MDBParser.cc

// Generated from MDBParser.g4 by ANTLR 4.9.3


#include "MDBParserVisitor.h"

#include "MDBParser.h"


using namespace antlrcpp;
using namespace antlr4;

MDBParser::MDBParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MDBParser::~MDBParser() {
  delete _interpreter;
}

std::string MDBParser::getGrammarFileName() const {
  return "MDBParser.g4";
}

const std::vector<std::string>& MDBParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MDBParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- RootContext ------------------------------------------------------------------

MDBParser::RootContext::RootContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MDBParser::MatchStatementContext* MDBParser::RootContext::matchStatement() {
  return getRuleContext<MDBParser::MatchStatementContext>(0);
}

MDBParser::ReturnStatementContext* MDBParser::RootContext::returnStatement() {
  return getRuleContext<MDBParser::ReturnStatementContext>(0);
}

tree::TerminalNode* MDBParser::RootContext::EOF() {
  return getToken(MDBParser::EOF, 0);
}

MDBParser::WhereStatementContext* MDBParser::RootContext::whereStatement() {
  return getRuleContext<MDBParser::WhereStatementContext>(0);
}

MDBParser::GroupByStatementContext* MDBParser::RootContext::groupByStatement() {
  return getRuleContext<MDBParser::GroupByStatementContext>(0);
}

MDBParser::OrderByStatementContext* MDBParser::RootContext::orderByStatement() {
  return getRuleContext<MDBParser::OrderByStatementContext>(0);
}

MDBParser::DescribeStatementContext* MDBParser::RootContext::describeStatement() {
  return getRuleContext<MDBParser::DescribeStatementContext>(0);
}


size_t MDBParser::RootContext::getRuleIndex() const {
  return MDBParser::RuleRoot;
}


antlrcpp::Any MDBParser::RootContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitRoot(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::RootContext* MDBParser::root() {
  RootContext *_localctx = _tracker.createInstance<RootContext>(_ctx, getState());
  enterRule(_localctx, 0, MDBParser::RuleRoot);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(104);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MDBParser::K_MATCH: {
        enterOuterAlt(_localctx, 1);
        setState(88);
        matchStatement();
        setState(90);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MDBParser::K_WHERE) {
          setState(89);
          whereStatement();
        }
        setState(93);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MDBParser::K_GROUP) {
          setState(92);
          groupByStatement();
        }
        setState(96);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MDBParser::K_ORDER) {
          setState(95);
          orderByStatement();
        }
        setState(98);
        returnStatement();
        setState(99);
        match(MDBParser::EOF);
        break;
      }

      case MDBParser::K_DESCRIBE: {
        enterOuterAlt(_localctx, 2);
        setState(101);
        describeStatement();
        setState(102);
        match(MDBParser::EOF);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DescribeStatementContext ------------------------------------------------------------------

MDBParser::DescribeStatementContext::DescribeStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDBParser::DescribeStatementContext::K_DESCRIBE() {
  return getToken(MDBParser::K_DESCRIBE, 0);
}

MDBParser::FixedNodeContext* MDBParser::DescribeStatementContext::fixedNode() {
  return getRuleContext<MDBParser::FixedNodeContext>(0);
}


size_t MDBParser::DescribeStatementContext::getRuleIndex() const {
  return MDBParser::RuleDescribeStatement;
}


antlrcpp::Any MDBParser::DescribeStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitDescribeStatement(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::DescribeStatementContext* MDBParser::describeStatement() {
  DescribeStatementContext *_localctx = _tracker.createInstance<DescribeStatementContext>(_ctx, getState());
  enterRule(_localctx, 2, MDBParser::RuleDescribeStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(MDBParser::K_DESCRIBE);
    setState(107);
    fixedNode();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MatchStatementContext ------------------------------------------------------------------

MDBParser::MatchStatementContext::MatchStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDBParser::MatchStatementContext::K_MATCH() {
  return getToken(MDBParser::K_MATCH, 0);
}

MDBParser::GraphPatternContext* MDBParser::MatchStatementContext::graphPattern() {
  return getRuleContext<MDBParser::GraphPatternContext>(0);
}


size_t MDBParser::MatchStatementContext::getRuleIndex() const {
  return MDBParser::RuleMatchStatement;
}


antlrcpp::Any MDBParser::MatchStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitMatchStatement(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::MatchStatementContext* MDBParser::matchStatement() {
  MatchStatementContext *_localctx = _tracker.createInstance<MatchStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, MDBParser::RuleMatchStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(MDBParser::K_MATCH);
    setState(110);
    graphPattern();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhereStatementContext ------------------------------------------------------------------

MDBParser::WhereStatementContext::WhereStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDBParser::WhereStatementContext::K_WHERE() {
  return getToken(MDBParser::K_WHERE, 0);
}

MDBParser::ExprContext* MDBParser::WhereStatementContext::expr() {
  return getRuleContext<MDBParser::ExprContext>(0);
}


size_t MDBParser::WhereStatementContext::getRuleIndex() const {
  return MDBParser::RuleWhereStatement;
}


antlrcpp::Any MDBParser::WhereStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitWhereStatement(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::WhereStatementContext* MDBParser::whereStatement() {
  WhereStatementContext *_localctx = _tracker.createInstance<WhereStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, MDBParser::RuleWhereStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    match(MDBParser::K_WHERE);
    setState(113);
    expr();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GroupByStatementContext ------------------------------------------------------------------

MDBParser::GroupByStatementContext::GroupByStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDBParser::GroupByStatementContext::K_GROUP() {
  return getToken(MDBParser::K_GROUP, 0);
}

tree::TerminalNode* MDBParser::GroupByStatementContext::K_BY() {
  return getToken(MDBParser::K_BY, 0);
}

std::vector<MDBParser::GroupByItemContext *> MDBParser::GroupByStatementContext::groupByItem() {
  return getRuleContexts<MDBParser::GroupByItemContext>();
}

MDBParser::GroupByItemContext* MDBParser::GroupByStatementContext::groupByItem(size_t i) {
  return getRuleContext<MDBParser::GroupByItemContext>(i);
}

std::vector<tree::TerminalNode *> MDBParser::GroupByStatementContext::COMMA() {
  return getTokens(MDBParser::COMMA);
}

tree::TerminalNode* MDBParser::GroupByStatementContext::COMMA(size_t i) {
  return getToken(MDBParser::COMMA, i);
}


size_t MDBParser::GroupByStatementContext::getRuleIndex() const {
  return MDBParser::RuleGroupByStatement;
}


antlrcpp::Any MDBParser::GroupByStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitGroupByStatement(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::GroupByStatementContext* MDBParser::groupByStatement() {
  GroupByStatementContext *_localctx = _tracker.createInstance<GroupByStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, MDBParser::RuleGroupByStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    match(MDBParser::K_GROUP);
    setState(116);
    match(MDBParser::K_BY);
    setState(117);
    groupByItem();
    setState(122);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MDBParser::COMMA) {
      setState(118);
      match(MDBParser::COMMA);
      setState(119);
      groupByItem();
      setState(124);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OrderByStatementContext ------------------------------------------------------------------

MDBParser::OrderByStatementContext::OrderByStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDBParser::OrderByStatementContext::K_ORDER() {
  return getToken(MDBParser::K_ORDER, 0);
}

tree::TerminalNode* MDBParser::OrderByStatementContext::K_BY() {
  return getToken(MDBParser::K_BY, 0);
}

std::vector<MDBParser::OrderByItemContext *> MDBParser::OrderByStatementContext::orderByItem() {
  return getRuleContexts<MDBParser::OrderByItemContext>();
}

MDBParser::OrderByItemContext* MDBParser::OrderByStatementContext::orderByItem(size_t i) {
  return getRuleContext<MDBParser::OrderByItemContext>(i);
}

std::vector<tree::TerminalNode *> MDBParser::OrderByStatementContext::COMMA() {
  return getTokens(MDBParser::COMMA);
}

tree::TerminalNode* MDBParser::OrderByStatementContext::COMMA(size_t i) {
  return getToken(MDBParser::COMMA, i);
}


size_t MDBParser::OrderByStatementContext::getRuleIndex() const {
  return MDBParser::RuleOrderByStatement;
}


antlrcpp::Any MDBParser::OrderByStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitOrderByStatement(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::OrderByStatementContext* MDBParser::orderByStatement() {
  OrderByStatementContext *_localctx = _tracker.createInstance<OrderByStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, MDBParser::RuleOrderByStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    match(MDBParser::K_ORDER);
    setState(126);
    match(MDBParser::K_BY);
    setState(127);
    orderByItem();
    setState(132);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MDBParser::COMMA) {
      setState(128);
      match(MDBParser::COMMA);
      setState(129);
      orderByItem();
      setState(134);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStatementContext ------------------------------------------------------------------

MDBParser::ReturnStatementContext::ReturnStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MDBParser::ReturnStatementContext::getRuleIndex() const {
  return MDBParser::RuleReturnStatement;
}

void MDBParser::ReturnStatementContext::copyFrom(ReturnStatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ReturnAllContext ------------------------------------------------------------------

tree::TerminalNode* MDBParser::ReturnAllContext::K_RETURN() {
  return getToken(MDBParser::K_RETURN, 0);
}

tree::TerminalNode* MDBParser::ReturnAllContext::STAR() {
  return getToken(MDBParser::STAR, 0);
}

tree::TerminalNode* MDBParser::ReturnAllContext::K_DISTINCT() {
  return getToken(MDBParser::K_DISTINCT, 0);
}

tree::TerminalNode* MDBParser::ReturnAllContext::K_LIMIT() {
  return getToken(MDBParser::K_LIMIT, 0);
}

tree::TerminalNode* MDBParser::ReturnAllContext::UNSIGNED_INTEGER() {
  return getToken(MDBParser::UNSIGNED_INTEGER, 0);
}

MDBParser::ReturnAllContext::ReturnAllContext(ReturnStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MDBParser::ReturnAllContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitReturnAll(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReturnListContext ------------------------------------------------------------------

tree::TerminalNode* MDBParser::ReturnListContext::K_RETURN() {
  return getToken(MDBParser::K_RETURN, 0);
}

std::vector<MDBParser::ReturnItemContext *> MDBParser::ReturnListContext::returnItem() {
  return getRuleContexts<MDBParser::ReturnItemContext>();
}

MDBParser::ReturnItemContext* MDBParser::ReturnListContext::returnItem(size_t i) {
  return getRuleContext<MDBParser::ReturnItemContext>(i);
}

tree::TerminalNode* MDBParser::ReturnListContext::K_DISTINCT() {
  return getToken(MDBParser::K_DISTINCT, 0);
}

std::vector<tree::TerminalNode *> MDBParser::ReturnListContext::COMMA() {
  return getTokens(MDBParser::COMMA);
}

tree::TerminalNode* MDBParser::ReturnListContext::COMMA(size_t i) {
  return getToken(MDBParser::COMMA, i);
}

tree::TerminalNode* MDBParser::ReturnListContext::K_LIMIT() {
  return getToken(MDBParser::K_LIMIT, 0);
}

tree::TerminalNode* MDBParser::ReturnListContext::UNSIGNED_INTEGER() {
  return getToken(MDBParser::UNSIGNED_INTEGER, 0);
}

MDBParser::ReturnListContext::ReturnListContext(ReturnStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MDBParser::ReturnListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitReturnList(this);
  else
    return visitor->visitChildren(this);
}
MDBParser::ReturnStatementContext* MDBParser::returnStatement() {
  ReturnStatementContext *_localctx = _tracker.createInstance<ReturnStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, MDBParser::RuleReturnStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(160);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<MDBParser::ReturnListContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(135);
      match(MDBParser::K_RETURN);
      setState(137);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == MDBParser::K_DISTINCT) {
        setState(136);
        match(MDBParser::K_DISTINCT);
      }
      setState(139);
      returnItem();
      setState(144);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MDBParser::COMMA) {
        setState(140);
        match(MDBParser::COMMA);
        setState(141);
        returnItem();
        setState(146);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(149);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == MDBParser::K_LIMIT) {
        setState(147);
        match(MDBParser::K_LIMIT);
        setState(148);
        match(MDBParser::UNSIGNED_INTEGER);
      }
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<MDBParser::ReturnAllContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(151);
      match(MDBParser::K_RETURN);
      setState(153);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == MDBParser::K_DISTINCT) {
        setState(152);
        match(MDBParser::K_DISTINCT);
      }
      setState(155);
      match(MDBParser::STAR);
      setState(158);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == MDBParser::K_LIMIT) {
        setState(156);
        match(MDBParser::K_LIMIT);
        setState(157);
        match(MDBParser::UNSIGNED_INTEGER);
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnItemContext ------------------------------------------------------------------

MDBParser::ReturnItemContext::ReturnItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MDBParser::ReturnItemContext::getRuleIndex() const {
  return MDBParser::RuleReturnItem;
}

void MDBParser::ReturnItemContext::copyFrom(ReturnItemContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ReturnItemVarContext ------------------------------------------------------------------

tree::TerminalNode* MDBParser::ReturnItemVarContext::VARIABLE() {
  return getToken(MDBParser::VARIABLE, 0);
}

tree::TerminalNode* MDBParser::ReturnItemVarContext::KEY() {
  return getToken(MDBParser::KEY, 0);
}

MDBParser::ReturnItemVarContext::ReturnItemVarContext(ReturnItemContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MDBParser::ReturnItemVarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitReturnItemVar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReturnItemAggContext ------------------------------------------------------------------

MDBParser::AggregateFuncContext* MDBParser::ReturnItemAggContext::aggregateFunc() {
  return getRuleContext<MDBParser::AggregateFuncContext>(0);
}

tree::TerminalNode* MDBParser::ReturnItemAggContext::L_PAR() {
  return getToken(MDBParser::L_PAR, 0);
}

tree::TerminalNode* MDBParser::ReturnItemAggContext::VARIABLE() {
  return getToken(MDBParser::VARIABLE, 0);
}

tree::TerminalNode* MDBParser::ReturnItemAggContext::R_PAR() {
  return getToken(MDBParser::R_PAR, 0);
}

tree::TerminalNode* MDBParser::ReturnItemAggContext::KEY() {
  return getToken(MDBParser::KEY, 0);
}

MDBParser::ReturnItemAggContext::ReturnItemAggContext(ReturnItemContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MDBParser::ReturnItemAggContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitReturnItemAgg(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReturnItemCountContext ------------------------------------------------------------------

tree::TerminalNode* MDBParser::ReturnItemCountContext::K_COUNT() {
  return getToken(MDBParser::K_COUNT, 0);
}

tree::TerminalNode* MDBParser::ReturnItemCountContext::L_PAR() {
  return getToken(MDBParser::L_PAR, 0);
}

tree::TerminalNode* MDBParser::ReturnItemCountContext::R_PAR() {
  return getToken(MDBParser::R_PAR, 0);
}

tree::TerminalNode* MDBParser::ReturnItemCountContext::VARIABLE() {
  return getToken(MDBParser::VARIABLE, 0);
}

tree::TerminalNode* MDBParser::ReturnItemCountContext::STAR() {
  return getToken(MDBParser::STAR, 0);
}

tree::TerminalNode* MDBParser::ReturnItemCountContext::K_DISTINCT() {
  return getToken(MDBParser::K_DISTINCT, 0);
}

tree::TerminalNode* MDBParser::ReturnItemCountContext::KEY() {
  return getToken(MDBParser::KEY, 0);
}

MDBParser::ReturnItemCountContext::ReturnItemCountContext(ReturnItemContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MDBParser::ReturnItemCountContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitReturnItemCount(this);
  else
    return visitor->visitChildren(this);
}
MDBParser::ReturnItemContext* MDBParser::returnItem() {
  ReturnItemContext *_localctx = _tracker.createInstance<ReturnItemContext>(_ctx, getState());
  enterRule(_localctx, 14, MDBParser::RuleReturnItem);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(187);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MDBParser::VARIABLE: {
        _localctx = _tracker.createInstance<MDBParser::ReturnItemVarContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(162);
        match(MDBParser::VARIABLE);
        setState(164);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MDBParser::KEY) {
          setState(163);
          match(MDBParser::KEY);
        }
        break;
      }

      case MDBParser::K_AVG:
      case MDBParser::K_MAX:
      case MDBParser::K_MIN:
      case MDBParser::K_SUM: {
        _localctx = _tracker.createInstance<MDBParser::ReturnItemAggContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(166);
        aggregateFunc();
        setState(167);
        match(MDBParser::L_PAR);
        setState(168);
        match(MDBParser::VARIABLE);
        setState(170);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MDBParser::KEY) {
          setState(169);
          match(MDBParser::KEY);
        }
        setState(172);
        match(MDBParser::R_PAR);
        break;
      }

      case MDBParser::K_COUNT: {
        _localctx = _tracker.createInstance<MDBParser::ReturnItemCountContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(174);
        match(MDBParser::K_COUNT);
        setState(175);
        match(MDBParser::L_PAR);
        setState(177);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MDBParser::K_DISTINCT) {
          setState(176);
          match(MDBParser::K_DISTINCT);
        }
        setState(184);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case MDBParser::VARIABLE: {
            setState(179);
            match(MDBParser::VARIABLE);
            setState(181);
            _errHandler->sync(this);

            _la = _input->LA(1);
            if (_la == MDBParser::KEY) {
              setState(180);
              match(MDBParser::KEY);
            }
            break;
          }

          case MDBParser::STAR: {
            setState(183);
            match(MDBParser::STAR);
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        setState(186);
        match(MDBParser::R_PAR);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AggregateFuncContext ------------------------------------------------------------------

MDBParser::AggregateFuncContext::AggregateFuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDBParser::AggregateFuncContext::K_SUM() {
  return getToken(MDBParser::K_SUM, 0);
}

tree::TerminalNode* MDBParser::AggregateFuncContext::K_MAX() {
  return getToken(MDBParser::K_MAX, 0);
}

tree::TerminalNode* MDBParser::AggregateFuncContext::K_MIN() {
  return getToken(MDBParser::K_MIN, 0);
}

tree::TerminalNode* MDBParser::AggregateFuncContext::K_AVG() {
  return getToken(MDBParser::K_AVG, 0);
}


size_t MDBParser::AggregateFuncContext::getRuleIndex() const {
  return MDBParser::RuleAggregateFunc;
}


antlrcpp::Any MDBParser::AggregateFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitAggregateFunc(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::AggregateFuncContext* MDBParser::aggregateFunc() {
  AggregateFuncContext *_localctx = _tracker.createInstance<AggregateFuncContext>(_ctx, getState());
  enterRule(_localctx, 16, MDBParser::RuleAggregateFunc);
  size_t _la = 0;
